****************************************************

Contents
	- Changes Introduced In 0.2.0
	- Changes Introduced In 0.1.3
	- Changes Introduced In 0.1.2
	- Changes Introduced In 0.1.1
    - Changes Introduced In 0.1.0

****************************************************
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\

**Changes introduced in 0.2.0

[Fix]		Relocated app images out of public directory.
[Fix]		Fixed port name validation.
[Fix]		Pass Host header through proxy to app server.
[Feature]	Objects displayed in cable paths are colored according to template category and are clickable.
[Fix]		Template and floorplan images have been moved out of the app directory to prevent deletion during upgrade or restart.
[Feature]	Added ability to define enclosure tolerance as strict or loose.
[Feature]	Added ability to clone templates
[Feature]	Improved markup for insert objects and connectable partitions for improved rendering.
[Feature]	Build->Templates: Added template workspace scrolling

**Changes introduced in 0.1.3

[Fix]		Build->Templates: Ports not displaying in connected partitions.
[Fix]		Build->Templates: Removed style border around enclosure input fields.
[Feature]	Import template to appropriate category instead of default category.
[Fix]		Prevent port orientation of non-connectable partitions from being editable in Build->Templates Template Details.

**Changes introduced in 0.1.2

[Fix]		Added organization name validation
[Feature]	Added ability to adjust server name, a server name is required for accepting user invitations.
[Fix]		Resolved erroneous entitlement errors when entitlement is unlimited
[Fix]		Resolved install bug stemming from syntax error introduced by addition of BottomLeft-Right port orientation.
[Feature]	Added port orientation to object detail.
[Feature]	Improved markup for template enclosures for improved rendering.

**Changes introduced in 0.1.1

[Fix]		Resolved broken SSL redirect.
[Feature]	Added PCM email proxy functionality.